[package]
name = "serialize_derive"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "derive for #[derive(Serialize)]"
repository  = "https://github.com/DragonXexe/serialize_derive"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "2.0.25"
quote = "1.0"