[package]
name = "serialize_derive"
version = "0.1.4"
edition = "2021"
license = "MIT"
description = "derive for #[derive(Serialize)] and #[derive(Deserialize)]"
# repository  = "https://github.com/DragonXexe/serialize_derive"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = "2.0.87"
quote = "1.0.37"
proc-macro2 = "1.0.89"
proc-macro-crate = "3.2.0"
